add redis cache aside
