# src/main/java/com/sgi/wallet/domain/model/redis/Transaction.java
@@ -1,0 +1,34 @@
+package com.sgi.wallet.domain.model.redis;
+
+import com.sgi.wallet.infrastructure.dto.UserDTO;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.index.Indexed;
+import org.springframework.data.redis.core.RedisHash;
+
+import java.io.Serializable;
+import java.math.BigDecimal;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@RedisHash(value = "transaction-wallet", timeToLive = 86400L)
+public class Transaction implements Serializable {
+    @Id
+    @Indexed
+    private String id;
+    private String walletId;
+    private String accountId;
+    private String clientId;
+    private String type;
+    private BigDecimal amount;
+    private String source;
+    private BigDecimal balance;
+    private String description;
+    private UserDTO sender;
+    private UserDTO receiver;
+}
