# src/main/java/com/sgi/wallet/infrastructure/subscriber/events/OrchestratorWalletEventResponse.java
@@ -1,5 +1,6 @@
 package com.sgi.wallet.infrastructure.subscriber.events;
 
+import com.sgi.wallet.infrastructure.dto.UserDTO;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -11,12 +12,18 @@ import java.math.BigDecimal;
 @Builder
 @AllArgsConstructor
 @NoArgsConstructor
-public class OrchestratorEvent {
-    private String cardId;
+public class OrchestratorWalletEventResponse {
+    private String status;
+    private String walletId;
     private String accountId;
     private String clientId;
     private String type;
     private BigDecimal amount;
+    private String source;
     private BigDecimal balance;
+    private String description;
+    private UserDTO sender;
+    private UserDTO receiver;
 
+    public static final String TOPIC = "OrchestratorWalletEventResponse";
 }
